# personal

./: README
filter_test/: passthrough.cpp  passthrough.cpp~
scanning/dev_tests/: notes  scanning.cpp
scanning/dev_tests/concatenate_test/: CMakeLists.txt  concatenate.cpp  concatenate.cpp~
scanning/dev_tests/filter_test/: passthrough.cpp
scanning/dev_tests/registration_test/: #normal_distributions_transform.cpp#~  normal_distributions_transform.cpp  normal_distributions_transform.cpp~  passthrough
scanning/dev_tests/registration_test/reg_tut/: CMakeLists.txt
scanning/dev_tests/registration_test/registration_final/: CMakeLists.txt  CMakeLists.txt~  registration.cpp~
scanning/dev_tests/samplePCDfiles/: filtered_cloud0.pcd  human_12o_filtered.pcd  human_4o_filtered.pcd  human_8o_filtered.pcd  registration
scanning/dev_tests/scanning_test/: CMakeLists.txt  scanning.cpp
scanning/dev_tests/visualizer_test/: CMakeLists.txt  visualizer.cpp  visualizer.cpp~
scanning/package/: capture.h~  dimensions.h  dimensions.h~  main.cpp  pointclouds.h  trap.h
